--- a/apps/free-app/package.json
+++ b/apps/free-app/package.json
@@ -33,6 +33,7 @@
     "react-helmet-async": "1.1.2",
     "react-router": "6.0.0-beta.0",
     "react-router-dom": "6.0.0-beta.0",
+    "react-scripts": "^5.0.0",
     "stylis": "4.0.10",
     "stylis-plugin-rtl": "2.1.0",
     "upgrade-react-scripts": "^1.0.0",
