--- a/apps/first-app/package.json
+++ b/apps/first-app/package.json
@@ -9,6 +9,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "dependencies": {
+    "shared-dep": "../../packages/shared-dep"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
