--- a/apps/first-app/package.json
+++ b/apps/first-app/package.json
@@ -9,9 +9,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "dependencies": {
-    "shared-dep": "../../packages/shared-dep/*"
-  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -32,5 +29,8 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0"
+  },
+  "dependencies": {
+    "react-scripts": "^5.0.0"
   }
 }
