--- a/apps/free-app/package.json
+++ b/apps/free-app/package.json
@@ -3,17 +3,14 @@
   "version": "1.1.0",
   "title": "Tokyo Free White React Admin Dashboard",
   "description": "This free and open source admin dashboard template is built for React and it’s bootstrapped from Facebook’s create-react-app. All NPM dependencies are up to date and it contains multiple fully customized components based on the popular frontend components framework, Material-UI.",
-  "author": {
-    "name": "BloomUI.com",
-    "url": "https://bloomui.com"
-  },
   "private": false,
   "dependencies": {
-    "@emotion/react": "11.4.1",
-    "@emotion/styled": "11.3.0",
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
     "@mui/icons-material": "5.0.3",
     "@mui/lab": "5.0.0-alpha.50",
-    "@mui/material": "5.0.3",
+    "@mui/material": "^5.2.7",
+    "@mui/styled-engine-sc": "^5.1.0",
     "@mui/styles": "5.0.1",
     "@types/nprogress": "0.2.0",
     "@types/react": "17.0.25",
@@ -34,6 +31,7 @@
     "react-router": "6.0.0-beta.0",
     "react-router-dom": "6.0.0-beta.0",
     "react-scripts": "^5.0.0",
+    "styled-components": "^5.3.3",
     "stylis": "4.0.10",
     "stylis-plugin-rtl": "2.1.0",
     "upgrade-react-scripts": "^1.0.0",
